--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,11 @@
     </site>
     <snapshotRepository>
             <id>nexus</id>
-            <url>http://54.167.44.112:8081/repository/maven-snapshots/</url>
+            <url>http://184.72.66.2141/repository/maven-snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>nexus</id>
-            <url>http:/54.167.44.112:8081/repository/maven-releases/</url>
+            <url>http:/184.72.66.214/repository/maven-releases/</url>
         </repository>
   </distributionManagement>
 
